--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
 
         <nav>
-            <img src="/Imagenes/Sin fondo.png">
+            <img src="Imagenes/Sin fondo.png">
             <div>
                 <ul>
                     <li><a href="#principal">Departamentos</a></li>
@@ -72,7 +72,7 @@
                     <a href="#depto1" class="article-link">Más detalles</a>
                 </div>
                 <img class="img-dept"
-                    src="/Imagenes/1-Standar/Portada-Standar.webp">
+                    src="Imagenes/1-Standar/Portada-Standar.webp">
             </div>
             <div class="tipo-depto">
                 <div class="Dresc">
@@ -81,7 +81,7 @@
                     <a href="#depto2" class="article-link">Más detalles</a>
                 </div>
                 <img class="img-dept"
-                    src="/Imagenes/2-Deluxe/Portada-deluxe.jpg">
+                    src="Imagenes/2-Deluxe/Portada-deluxe.jpg">
             </div>
             <div class="tipo-depto">
                 <div class="Dresc">
@@ -89,7 +89,7 @@
                     <h4> Para 4 a 6 personas </h4>
                     <a href="#depto3" class="article-link">Más detalles</a>
                 </div>
-                <img class="img-dept" src="/Imagenes/3-Duplex/portada-duplex">
+                <img class="img-dept" src="Imagenes/3-Duplex/portada-duplex">
             </div>
             <div class="tipo-depto">
                 <div class="Dresc">
@@ -98,14 +98,14 @@
                     <a href="#depto4" class="article-link">Más detalles</a>
                 </div>
                 <img class="img-dept"
-                    src="/Imagenes/4-Mono_Ambiente/portada-mono.webp">
+                    src="Imagenes/4-Mono_Ambiente/portada-mono.webp">
             </div>
         </header>
 
         <section class="depto" id="depto1">
 
             <img class="portada-dept"
-                src="/Imagenes/1-Standar/Portada-Standar.webp">
+                src="Imagenes/1-Standar/Portada-Standar.webp">
             <div class="cont-text">
                 <h1> Departamento Standard</h1>
                 <h3> Para 2 personas </h3>
@@ -148,12 +148,12 @@
                     target="_blank"><button>RESERVAR ESTE DEPARTAMENTO</button></a>
             </div>
             <img class="portada-dept"
-                src="/Imagenes/2-Deluxe/Portada-deluxe.jpg">
+                src="Imagenes/2-Deluxe/Portada-deluxe.jpg">
         </section>
 
         <section class="depto" id="depto3">
             <img class="portada-dept"
-                src="/Imagenes/3-Duplex/portada-duplex">
+                src="Imagenes/3-Duplex/portada-duplex">
             <div class="cont-text">
                 <h1> Departamento Duplex</h1>
                 <h3> Para 2 personas </h3>
@@ -195,7 +195,7 @@
                     target="_blank"><button>RESERVAR ESTE DEPARTAMENTO</button></a>
             </div>
             <img class="portada-dept"
-                src="/Imagenes/4-Mono_Ambiente/portada-mono.webp">
+                src="Imagenes/4-Mono_Ambiente/portada-mono.webp">
         </section>
 
         <section id="servicios">
@@ -204,35 +204,35 @@
 
                 <div id="Conte-serv">
                     <div class="Servicio">
-                        <img src="/Imagenes/5-Servicios/wifi.svg">
+                        <img src="Imagenes/5-Servicios/wifi.svg">
                         <h3>WIFI Gratis</h3>
                     </div>
                     <div class="Servicio">
-                        <img src="/Imagenes/5-Servicios/car-sport.svg">
+                        <img src="Imagenes/5-Servicios/car-sport.svg">
                         <h3>Parking gratis </h3>
                     </div>
                     <div class="Servicio">
-                        <img src="/Imagenes/5-Servicios/logo-no-smoking.svg">
+                        <img src="Imagenes/5-Servicios/logo-no-smoking.svg">
                         <h3>Habitaciones sin humo</h3>
                     </div>
                     <div class="Servicio">
-                        <img src="/Imagenes/5-Servicios/tv.svg">
+                        <img src="Imagenes/5-Servicios/tv.svg">
                         <h3>TV</h3>
                     </div>
                     <div class="Servicio">
                         <img
-                            src="/Imagenes/5-Servicios/icons8-silla-de-ruedas-48.png">
+                            src="Imagenes/5-Servicios/icons8-silla-de-ruedas-48.png">
                         <h3>Accesibilidad</h3>
                     </div>
                     <div class="Servicio">
                         <img
-                            src="/Imagenes/5-Servicios/icons8-aire-acondicionado-50.png">
+                            src="Imagenes/5-Servicios/icons8-aire-acondicionado-50.png">
                         <h3>Aire acondicionado</h43>
                     </div>
                 </div>
                 <div class="mas-serv">
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/thumb-up.png">
+                        <img src="Imagenes/5-Servicios/thumb-up.png">
                         <h3>Ideal para tu estancia</h3>
                         <ul>
                             <li>✔ WiFi gratis</li>
@@ -249,7 +249,7 @@
                     </div>
 
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/microwave-oven.png">
+                        <img src="Imagenes/5-Servicios/microwave-oven.png">
                         <h3>Cocina</h3>
                         <ul>
                             <li>✔ Mesa de comedor</li>
@@ -266,7 +266,7 @@
                     </div>
 
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/bathroom.png">
+                        <img src="Imagenes/5-Servicios/bathroom.png">
                         <h3>Baño</h3>
                         <ul>
                             <li>✔ Papel higiénico</li>
@@ -283,7 +283,7 @@
                         </ul>
                     </div>
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/nature.png">
+                        <img src="Imagenes/5-Servicios/nature.png">
                         <h3>Exteriores</h3>
                         <ul>
                             <li>✔ Patio</li>
@@ -291,7 +291,7 @@
                         </ul>
                     </div>
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/double-bed.png">
+                        <img src="Imagenes/5-Servicios/double-bed.png">
                         <h3>Habitación</h3>
                         <ul>
                             <li>✔ Ropa de cama</li>
@@ -299,7 +299,7 @@
                         </ul>
                     </div>
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/tv.svg">
+                        <img src="Imagenes/5-Servicios/tv.svg">
                         <h3>Equipamiento audiovisual y tecnológico</h3>
                         <ul>
                             <li>✔ TV de pantalla plana</li>
@@ -309,7 +309,7 @@
                         </ul>
                     </div>
                     <div class="mas-Servicio">
-                        <img src="/Imagenes/5-Servicios/sofa.png">
+                        <img src="Imagenes/5-Servicios/sofa.png">
                         <h3>Zona de estar</h3>
                         <ul>
                             <li>✔ Zona de comedor</li>
@@ -412,13 +412,13 @@
                         <tr>
                             <td>Métodos de pago aceptados</td>
                             <td><img class="pago-icono"
-                                    src="/Imagenes/7-Normas/visa.png">
+                                    src="Imagenes/7-Normas/visa.png">
                                 <img class="pago-icono"
-                                    src="/Imagenes/7-Normas/mastercard.png">
+                                    src="Imagenes/7-Normas/mastercard.png">
                                 <img class="pago-icono"
-                                    src="/Imagenes/7-Normas/american.png">
+                                    src="Imagenes/7-Normas/american.png">
                                 <img class="pago-icono"
-                                    src="/Imagenes/7-Normas/efectivo.png">
+                                    src="Imagenes/7-Normas/efectivo.png">
                             </td>
                         </tr>
                         <tr>
@@ -441,7 +441,7 @@
                     </table>
                     <div class="normas-info">
                         <div class="info-titulo"><img class="excla-icono"
-                                src="/Imagenes/7-Normas/exclamacion.png">
+                                src="Imagenes/7-Normas/exclamacion.png">
                             <h1>A tener en cuenta</h1></div>
 
                         <h3>Información importante sobre el alojamiento</h3>
@@ -474,7 +474,7 @@
                 </div>
                 <div class="cont-links">
                     <div class="grupo">
-                        <img src="/Imagenes/8-Contacto/logo-instagram.svg">
+                        <img src="Imagenes/8-Contacto/logo-instagram.svg">
                         <h2>Estamos en INSTAGRAM</h2>
                         <h3>Para ver mas de los departamentos</h3>
                         <a
@@ -487,7 +487,7 @@
                     </div>
 
                     <div class="grupo">
-                        <img src="/Imagenes/8-Contacto/logo-whatsapp.svg">
+                        <img src="Imagenes/8-Contacto/logo-whatsapp.svg">
                         <h2>Escrbinos por WHATSAPP</h2>
                         <h3>Apretá el botón y Resolvemos tu consulta</h3>
                         <a
@@ -500,7 +500,7 @@
                     </div>
 
                     <div class="grupo">
-                        <img src="/Imagenes/8-Contacto/mail-outline.svg">
+                        <img src="Imagenes/8-Contacto/mail-outline.svg">
                         <h2>Tambien tenemos EMAIL</h2>
                         <h3>Para consultas y reservas </h3>
                         <a
